--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; object-src 'none';" />
+    <meta 
+      http-equiv="Content-Security-Policy"
+      content="
+        default-src 'self';
+        script-src 'self' 'unsafe-eval' https://unpkg.com;
+        worker-src 'self' blob:;
+        connect-src 'self' https://wsadegzzmafyxwkjwexk.supabase.co http://localhost:8000;
+        style-src 'self' 'unsafe-inline';
+        img-src 'self' data:;
+        media-src 'self' data:;
+        object-src 'none';
+      " 
+    />
     <link rel="icon" type="image/svg+xml" href="/entity-white.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Entity</title>
